Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-06-22 (SVN):
    * pr_edict.c (PR_LoadProgs): Sync h2 and hw progs crc calculation.
    * pr_cmds.c: Multiple clean ups. Added notes to some bound checks.
      Removed the union from PF_updateInfoPlaque() and made it to do
      the bit test and bit set using unsigned varibles. Also made it
      to PR_RunError if the objective index is greater than 63.
    * client.h (client_state_t), server.h (client_t): Change info_mask
      and info_mask2 from signed int to unsigned int.
    * host_cmd.c: Remove some dead and commented out code.
    * progs.h: Mark PR_RunError() as a noreturn function: it doesn't
      return because it calls Host_Error() whics is also a noreturn
      function.

2011-06-20 (SVN):
    * scripts/cdrip_hexen2.sh, cdrip_missionpack.sh: Minor tidy up.
    * rpm/hexen2.spec: Install the cd-rip scripts.
    * Minor updates to the TODO and README.music documents.
    * Moved Host_Version_f from host_cmd.c to host.c.
    * model.c, gl_model.c: Cleanup for local/global mins/maxs variables.

2011-06-19 (SVN):
    * Bumped beta date to 2011-06-19. Updated the 1.5.0 release notes.
    * host_cmd.c (LoadGamestate): Before calling ED_ParseEdict(), default
      to active edict because ED_ParseEdict() will set it to free if it
      really is. Fixes a game load bug where a freed entity slot within
      the map's original num_edicts range is reused for a dropped a soul
      sphere and the game then re-saved: see bug entry #3287803.  Noticed
      by Thomas.  No need to clear the edict from within LoadGamestate(),
      either, because ED_ParseEdict() will already do it for us, since
      SaveGamestate() doesn't write entnum 0.

2011-06-19 (SVN):
    * removed my old ugly hack of reducing teleport push speed to 225 in
      order to overcome the problem of reaching the Cathedral's balcony
      and the holy cross (triggers.hc::teleport_touch), and added Thomas'